--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -9,37 +9,13 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="81dp"
-        android:layout_height="19dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="165dp"
         android:layout_marginTop="213dp"
         android:layout_marginEnd="165dp"
         android:text="@string/app_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/water"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="341dp"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="342dp"
-        android:text="@string/water_page"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/timer"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="341dp"
-        android:layout_marginBottom="342dp"
-        android:text="@string/timer_page"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,8 +28,30 @@
         android:text="@string/workouts_page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/water"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/timer"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/water"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginEnd="36dp"
+        android:text="@string/water_page"
+        app:layout_constraintBottom_toBottomOf="@+id/workouts"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/workouts"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginStart="36dp"
+        android:text="@string/timer_page"
+        app:layout_constraintBottom_toBottomOf="@+id/workouts"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/workouts"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
