--- a/app/src/main/res/layout/timer_numerical.xml
+++ b/app/src/main/res/layout/timer_numerical.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/timer_page_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="187dp"
@@ -49,7 +49,7 @@
         app:layout_constraintBottom_toTopOf="@+id/timer_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/timer_page_title" />
 
     <Button
         android:id="@+id/timer_toggle"
