--- a/app/src/main/res/layout/water.xml
+++ b/app/src/main/res/layout/water.xml
@@ -16,16 +16,104 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/water_page_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="298dp"
-        android:layout_marginEnd="198dp"
-        android:layout_marginBottom="414dp"
+        android:layout_marginStart="187dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="187dp"
+        android:layout_marginBottom="562dp"
         android:text="@string/water_page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/drank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="176dp"
+        android:layout_marginBottom="485dp"
+        android:text="@string/water_default"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/water_page_title"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/small_glass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/small_glass"
+        app:layout_constraintBottom_toBottomOf="@+id/medium_glass"
+        app:layout_constraintEnd_toStartOf="@+id/medium_glass"
+        app:layout_constraintTop_toTopOf="@+id/medium_glass" />
+
+    <Button
+        android:id="@+id/medium_glass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="95dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="342dp"
+        android:text="@string/medium_glass"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/drank"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/large_glass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/large_glass"
+        app:layout_constraintBottom_toBottomOf="@+id/medium_glass"
+        app:layout_constraintStart_toEndOf="@+id/medium_glass"
+        app:layout_constraintTop_toTopOf="@+id/medium_glass" />
+
+    <Button
+        android:id="@+id/half_pint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/half_pint"
+        app:layout_constraintEnd_toStartOf="@+id/pint"
+        app:layout_constraintTop_toBottomOf="@+id/small_glass" />
+
+    <Button
+        android:id="@+id/pint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/pint"
+        app:layout_constraintEnd_toEndOf="@+id/medium_glass"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/medium_glass"
+        app:layout_constraintTop_toBottomOf="@+id/medium_glass" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/volume"
+        android:layout_width="90dp"
+        android:layout_height="48dp"
+        android:background="@color/purple"
+        android:hint="@string/custom_amount"
+        android:inputType="numberSigned"
+        android:singleLine="true"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/pint"
+        app:layout_constraintTop_toBottomOf="@+id/large_glass" />
+
+    <Button
+        android:id="@+id/confirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/confirm"
+        app:layout_constraintStart_toEndOf="@+id/pint"
+        app:layout_constraintTop_toBottomOf="@+id/volume" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
