Added basic calorie tracker to count workouts Replaced anonymous runnable with lambda in TimerNumerical (optimisation) Removed un-needed auto generated files Improved uniformity in layout Converted classes to primitives where possible (optimisation)

--- a/app/src/main/res/layout/water.xml
+++ b/app/src/main/res/layout/water.xml
@@ -34,15 +34,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="176dp"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="43dp"
         android:layout_marginEnd="176dp"
-        android:layout_marginBottom="485dp"
         android:text="@string/water_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/water_page_title"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.08" />
 
     <Button
         android:id="@+id/small_glass"
@@ -109,7 +108,7 @@
         app:layout_constraintTop_toBottomOf="@+id/large_glass" />
 
     <Button
-        android:id="@+id/confirm"
+        android:id="@+id/confirm_water"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirm"
