--- a/app/src/main/res/layout/timer_numerical.xml
+++ b/app/src/main/res/layout/timer_numerical.xml
@@ -20,9 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="187dp"
-        android:layout_marginTop="109dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="187dp"
-        android:layout_marginBottom="603dp"
+        android:layout_marginBottom="562dp"
         android:text="@string/timer_page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,8 @@
         app:layout_constraintBottom_toTopOf="@+id/timer_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timer_page_title" />
+        app:layout_constraintTop_toBottomOf="@+id/timer_page_title"
+        app:layout_constraintVertical_bias="0.08" />
 
     <Button
         android:id="@+id/timer_toggle"
