--- a/app/src/main/res/layout/timer_numerical.xml
+++ b/app/src/main/res/layout/timer_numerical.xml
@@ -80,4 +80,24 @@
         app:layout_constraintStart_toEndOf="@+id/timer_toggle"
         app:layout_constraintTop_toTopOf="@+id/timer_toggle"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ScrollView
+        android:id="@+id/laps"
+        android:layout_width="352dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="336dp"
+        android:layout_marginEnd="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timer_page_title">
+
+        <LinearLayout
+            android:id="@+id/laps_done"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
