--- a/app/src/main/res/layout/timer_numerical.xml
+++ b/app/src/main/res/layout/timer_numerical.xml
@@ -98,7 +98,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="10dp" />
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp" />
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
